Just before submission to surendra sir

--- a/bibliography/glossary.tex
+++ b/bibliography/glossary.tex
@@ -35,3 +35,4 @@
 \newacronym{hts}{HTS}{High Throughput Screening}
 \newacronym{qsar}{QSAR}{Quantitative Structure Activity Relation}
 \newacronym{rnn}{RNN}{Recursive Neural Network}
+\newacronym{et}{ET}{Evolutionary Transformation}
