--- a/mainmatter/3-Methodology/sections/kiba.tex
+++ b/mainmatter/3-Methodology/sections/kiba.tex
@@ -6,7 +6,7 @@
 \fi
 
 \subsection{\acrfull{kiba}}
-The \acrfull{kiba} Scores are collected from the publicly made available dataset \cite[\textit{Tang. et al.}]{Tang2013}. The scores are actually based on thermodynamic constants K\textsubscript{i} and K\textsubscript{d} and, remaining enzyme activity(Activity \% --  IC\textsubscript{50}) .
+The \acrfull{kiba} Scores are collected from the publicly made available dataset \cite[\textit{Tang. et al.}]{Tang2013}. The scores are based on thermodynamic constants K\textsubscript{i} and K\textsubscript{d} and, remaining enzyme activity(Activity \% --  IC\textsubscript{50}).
 
 % \begin{flushright}
 \begin{equation}
@@ -45,4 +45,4 @@ where,  [{S}] is the experimental substrate concentration and K\textsubscript{m}
 \fi
 
 
-All the bioactivity types are available from CHEMBL\cite{Gaulton2017}. Based on interaction data available, we remove the unknown values and get a total of 180244 interaction KIBA score values in the range of -3.09 to 17.8. With the standard deviation of 1.22, it represents a total of \arabic{no_proteins} proteins and \arabic{no_drugs} drugs.
+All the bioactivity types are available from CHEMBL\cite{Gaulton2017}. Based on interaction data available, we remove the unknown values and obtained a total of 180244 interaction KIBA score values in the range of -3.09 to 17.8. With the standard deviation of 1.22, it represents a total of \arabic{no_proteins} proteins and \arabic{no_drugs} drugs.
