--- a/mainmatter/5-Conclusion/limitations.tex
+++ b/mainmatter/5-Conclusion/limitations.tex
@@ -4,11 +4,10 @@
 This work only relates with the molecular properties of drugs and proteins to determine the best targets. The limitations to the deep learning method of protein-drug prediction in this manner are:
 \begin{itemize}
     \item Pharmacophore model of drugs and proteins have not been addressed. This is due to inavailability of proper datasets and highly complex nature of protein mechanism that the work become out of scope.
-    \item The protein folds haven't been analyzed because the processer requirements of such algorithms rise exponentially with every components cascaded one over the another.
 \end{itemize}
 
-\section{Remaining Works}
-We have only approached the sample space of \acrfull{nfl} by forming the different feature-sets. However, the generalized optimization has not been achieved yet. The grid-search CV and Stacking Generalization will be used to create a better optimized machine learning method to solve the problem of protein-drug interaction from sequence information.
+\section{Future Works}
+We have only approached the sample space of \acrfull{nfl} by forming the different feature-sets. However, the generalized optimization has not been achieved yet. The grid-search CV and Stacking Generalization can be used to create a better optimized machine learning method to solve the problem of protein-drug interaction from sequence information.
 
 \iffalse
 \section{Future Work}
