--- a/mainmatter/common.tex
+++ b/mainmatter/common.tex
@@ -2,3 +2,5 @@
 \setcounter{no_drugs}{52498}
 \newcounter{no_proteins}
 \setcounter{no_proteins}{254}
+\newcounter{best_ci}
+\setcounter{best_ci}{87}
