--- a/mainmatter/3-Methodology/sections/pssm.tex
+++ b/mainmatter/3-Methodology/sections/pssm.tex
@@ -1,6 +1,6 @@
 \subsection{Position Specific Score Matrix}
 
-\acrfull{pssm} is a very useful protein feature. The protein feature represented by PSSM depends on the sequence of all the proteins in consideration. The HUMAN genome protein (a database of more than 100,000) is downloaded from UniProt Library and we construct the PSSM matrix for each of the kinase proteins based on this HUMAN Genome Protein Database. Doing so, we try to characterize the PSSM matrix according to human proteins in a motivation to anticipate the prediction of new identified kinase proteins.
+\acrfull{pssm} is a very useful protein feature. The protein feature represented by PSSM depends on the sequence of all the proteins in consideration. The HUMAN genome protein (a database of more than 100,000) is downloaded from UniProt Library. The PSSM matrix is constructed for each of the kinase proteins based on this HUMAN Genome Protein Database. With this, the PSSM matrix is characterized according to human proteins to anticipate the prediction of new identified kinase proteins.
 
 \begin{table}
   \centering
@@ -119,7 +119,7 @@ Table \ref{table:PSSM_Analysis} shows a rudimentary process of calculating PSSM 
   The molecular fingerprints related to drugs are referenced usning CHEMBL Identifier and the drug sequence is called from CHEMBL database. \cite{Gaulton2017}
   \fi
   \subsection{PSI-BLAST}
-  PSI-Blast tools relates with multiple sequence alignments from a family of protein sequences\cite{Schaffer2001}. This helps us to create a \acrshort{pssm} - Equation (\ref{eq:pssm}) - matrix referred to as secondary protein structure. For this study, the PSSM profile of every protein sequence is obtained by executing iteration of PSI-BLAST against \cite[KEGG]{Schaffer2001} protein. PSSM profile is a matrix of L*20 dimensions where, 20 referring to standard type of amino acids and L being the length of the protein. The larger positive scores represent conserved positions, which in turn implies critical functional residues that are required to perform various intermolecular interactions.\cite[PSSM]{Schaffer2001}
+  PSI-Blast tools relates with multiple sequence alignments from a family of protein sequences\cite{Schaffer2001}. This helps to create a \acrshort{pssm} - Equation (\ref{eq:pssm}) - matrix referred to as secondary protein structure. For this study, the PSSM profile of every protein sequence is obtained by executing iteration of PSI-BLAST against \cite[KEGG]{Schaffer2001} protein. PSSM profile is a matrix of L*20 dimensions whereby 20 is the standard type of amino acids and L being the length of the protein. The larger positive scores represent conserved positions, which in turn implies critical functional residues that are required to perform various intermolecular interactions.\cite[PSSM]{Schaffer2001}
   
   \begin{equation}
     PSSM = \begin{bmatrix}
@@ -149,7 +149,7 @@ Table \ref{table:PSSM_Analysis} shows a rudimentary process of calculating PSSM 
   Thus we have [380 ~\eqref{eq:pssmddt}+20 ~\eqref{eq:pssmsdt} = 400] x lg matrix which will be used as protein-specific vector in this work.
   
   \subsubsection{Evolutionary Distance Transformation Matrix}
-  The mutational information of protein can be more informative than the sequence information itself\cite{Zhang2014}. Evolutionary difference formula(EDF) is used to represent mutation difference between adjacent residues. Secondly, the PSSM is converted into 20 x 20 matrix (ED-PSSM). This extracts the non co-occurrence probability for two amino acids separated by a certain distance \textit{d} in the protein from the PSSM profile. For example, d=1 implies that the two amino acids are consecutive; d=2 implies that there is one amino acid between the two. Then the EDT feature vector computed from ED-PSSM can be represented as (~\ref{eq:Pmat}): 
+  The mutational information of protein can be more informative than the sequence information itself\cite{Zhang2014}. Evolutionary difference formula (EDF) is used to represent mutation difference between adjacent residues. Secondly, the PSSM is converted into 20 x 20 matrix (ED-PSSM). These extracts are the non co-occurrence probability for two amino acids separated by a certain distance \textit{d} in the protein from the PSSM profile. For example, d=1 implies that the two amino acids are consecutive; d=2 implies that there is one amino acid between the two. Next, the EDT feature vector computed from ED-PSSM can be represented as (~\ref{eq:Pmat}): 
   \begin{equation}
     \label{eq:Pmat}
     P = [ \partial_1 ,\partial_2, \dots, \partial_\Omega]
@@ -165,7 +165,7 @@ Table \ref{table:PSSM_Analysis} shows a rudimentary process of calculating PSSM 
   
   
   \subsection{Residue feature} 
-  The Statistical Residue Vector Space \acrshort{srv} \cite{Wong2018} plays an important role in Residue Residue Interaction and thus creates a basis for structural stability of the protein sequence itself. Though related more to the tertiary structure of protein sequence itself, we regard it to create a correlated sequence information where two proteins are related distantly by sequence but highly related with functional characteristic of protein. Table ~\ref{table:r2r} is used in this work. It is a 20 x 20 matrix whose rows and columns represent 20 standard amino acids.
+  The Statistical Residue Vector Space \acrshort{srv} \cite{Wong2018} plays an important role in Residue Residue Interaction and creates a basis for structural stability of the protein sequence itself. It is related to the tertiary structure of the protein sequence. Nonetheless, another function is to create a correlated sequence of information whereby two proteins are distantly related by sequence. Simultaneously, it is highly related to the functional characteristic of protein.  With this, Table ~\ref{table:r2r} as attached in Appendix depicts a 20 x 20 matrix whose rows and columns represent 20 standard amino acids.
   
   \subsubsection{Residue Probing Transformation(RPT) feature}
   RPT as proposed by Jeong et al.\cite{Jeong2011}, and implemented by Pujan et al.\cite{Mishra2019}, emphasize domains with similar conservation rates by grouping domain families based on their conservation score in the PSSM profile.
@@ -192,7 +192,7 @@ Table \ref{table:PSSM_Analysis} shows a rudimentary process of calculating PSSM 
 
   \subsection{Labelled Encodings}
   
-  The labeled encoding techniques is used to represent the canonical structure of drugs and proteins. The structural canonical information is preserved while sending the feature set to deep learning method. An array of integers is formed from particular sequence while representing the structural information.
+  The labeled encoding techniques is used to represent the canonical structure of drugs and proteins. The structural canonical information is preserved while sending the feature set to deep learning method. An array of integers are formed from particular sequence while representing the structural information.
   
   The Labelled Encodings of protein and drugs can be defined by Table \ref{table:label_encoding} :
   \begin{table}[h]
@@ -239,77 +239,3 @@ Table \ref{table:PSSM_Analysis} shows a rudimentary process of calculating PSSM 
 	% 		 "l": 55, "o": 56, "n": 57, "s": 58, "r": 59, "u": 60,
 	% 		 "t": 61, "y": 62 }
   
-  \section{Deep Learning Model}
-  
-  The Features thus formed are then subjected to deep learning model using keras library in python. We use the Embedding feature provided by keras as other features for both drug fingerprint and protein sequence. The implemented model is represented by Figure ~\ref{fig:dlm}. The input layers are described in Table ~\ref{table:inputs}.
-  
-  \begin{figure}[ht]
-  \centering
-  \includegraphics[width=1\linewidth]{mainmatter/3-Methodology/images/build_combined_categorical_tensor_contact_new.png}
-  \caption{Deep Learning Model to predict Protein-Drug Interaction}
-  \label{fig:dlm}
-  \end{figure}
-  \begin{table}[ht]\centering
-    \caption{Inputs Used in the Deep Learning Network} 
-    \begin{tabular}{|l|l|l|l|}
-      \hline 
-      S.No. & Input Layer Name & Used Feature Vector & Type \\ \hline
-      1 & input\_1 & Label Encodings & Drug \\ \hline
-      2 & input\_2 & Label Encodings & Protein \\ \hline
-      3 & input\_3 & Evolutionary Distance Transformation Vector& Protein \\ \hline
-      4 & input\_4 & PSSM-DT Vector & Protein \\ \hline
-      5 & input\_5 & Residue Probing Transformation Vector & Protein \\   \hline 
-    \end{tabular} 
-    \label{table:inputs}
-  \end{table}
-  
-  \subsection{Components description used from Tensorflow (Keras)}
-  \subsubsection{Embedding Layer}
-  The one-hot encodings of the drugs and protein sequences are inputs to this layer. It turns positive integers (indexes) into dense vectors of fixed size. eg. [[4], [20]] -> [[0.25, 0.1], [0.6, -0.2]].
-  
-  \subsubsection{Dense Layer}
-  Dense Layer is a neural layer which fully connects the input layer to output layer. It can be used to learn the global pattern of the feature data. The representation can be seen from Figure ~\ref{fig:dense}.
-  \input{mainmatter/3-Methodology/images/dense.tex}
-  
-  \subsubsection{Dropout Layer}
-  Our model becomes undesirable when every component of the input layer makes a significant changes to the output layer. To reduce the effect of unimportant features we use dropout layer. Thus the backpropagation network tries to ignore the noise features and minimizes the unrealizable prediction of the learning problem. This can be expressed diagrammatically in Figure ~\ref{fig:dropout}.
-  \begin{figure}
-    [ht] \centering
-    \includegraphics[width=.5\linewidth]{mainmatter/3-Methodology/images/dropout.jpeg}
-    \caption[Dropout Layer]{a) Standard neural network whose all the nodes have weights connected to higher nodes and lower nodes. b) Certain nodes belonging to same levels are disconnected. Some weights are also disconnected from other nodes depending on the percentage of dropout applied.}
-    \label{fig:dropout}
-  
-  \end{figure}
-  
-  \subsubsection{Pooling Layer}
-  The Pooling layer is used to downsample the learned parameters from the grid of 3 dimensions returned by Convolution Layer. It gets reduced to 1 dimension by taking the highest values from the window size(corresponding to shape of 1\textsuperscript{st} dimensional element).
-  \begin{figure}[h] \centering
-    \includegraphics[width=.75\linewidth]{mainmatter/3-Methodology/images/pooling.pdf}
-    \caption{Pooling Layer}
-    \label{fig:pool_layer}
-  \end{figure}
-  
-  \subsubsection{Concatenation Layer}
-  Concatenation Layer as the name implies is used to simply join two vectors so that we create a feature set comprising of multiple features whose positional index indicates the feature set being manipulated.
-  
-  \subsubsection{Convolution Neural Network}
-  To learn the local patterns in the input vector, we use \acrshort{cnn}. While Dense Layers and \acrshort{lstm} learn the global patterns, \acrshort{cnn} is used to understand the local patterns. It does so by increasing the depth layer, which in turn is designed to learn different patterns as shown in Figure ~\ref{fig:cnn}.
-  \begin{figure}[ht]
-    \centering
-    \includegraphics[width=.5\linewidth]{mainmatter/3-Methodology/images/cnn.png}
-    \caption{Convolutional Neural Network}
-    \label{fig:cnn}
-  \end{figure}
-  
-  \iffalse
-  \subsubsection{LSTM}
-  As the \acrfull{rnn} often suffers from vanishing gradient problem~\footnote{Vanishing Gradient:During the training of RNN, the model vectors form a part of a loop and makes an unstable network.}, we use a \acrshort{lstm} Layer to learn the global pattern of the feature sets resulting after concatenation of different stacked layers outputs. The LSTM architecture can be seen in Figure ~\ref{fig:lstm}:
-  \begin{figure} 
-    [t]
-    \centering
-    \includegraphics[width=1\linewidth]{mainmatter/3-Methodology/images/LSTM.pdf}
-    \caption{Long Short Term Memory}
-    \label{fig:lstm}
-  \end{figure}
-  In Figure~\ref{fig:lstm}, we can see that it contains a forget node, memory node and output node. These three nodes balance the information that needs to be removed, stored for future updates and necessarily fire the output node to make correct prediction.
-  \fi
