--- a/configs.tex
+++ b/configs.tex
@@ -136,3 +136,5 @@
 % Add figure and table
 \usepackage{chngcntr}
 \usepackage{wrapfig}
+
+% \usepackage[backend=biber, style=alpabetic, citestyle=apa]{biblatex}
