--- a/main.tex
+++ b/main.tex
@@ -133,7 +133,7 @@
 
 % Bibliography
 \renewcommand{\bibname}{References}
-\bibliographystyle{unsrt}
+\bibliographystyle{abbrv}
 \bibliography{bibliography/sample}
 \addcontentsline{toc}{chapter}{References}
 
