--- a/tips.tex
+++ b/tips.tex
@@ -28,7 +28,7 @@
 % Landspace figure
 
 \begin{landscape}
-	\begin{figure}[htbp]
+	\begin{figure}[H]
 \centering
 \includegraphics[width=0.5\linewidth]{introduction/fig/Felix_the_cat.pdf}
 \caption{Here's a large drawing of Felix the Cat that wouldn't fit in a portrait page}
