--- a/mainmatter/3-Methodology/images/dense.tex
+++ b/mainmatter/3-Methodology/images/dense.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ht]
+\begin{figure}[H]
     \centering
     % \includegraphics[width=.5\linewidth]{mainmatter/3-Methodology/images/dense.png}
     
